<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ocse.hse.DeviceSettingsActivity">

    <TextView
        android:id="@+id/labelHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_device_holder"/>
    <EditText
        android:id="@+id/txtDeviceHolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@id/labelHolder"/>
    <TextView
        android:id="@+id/labelPhoneNumber"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDeviceHolder"
        android:text="@string/label_device_phonenumber"/>
    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelPhoneNumber"
        android:singleLine="true"
        android:inputType="phone"
        android:enabled="true"/>
    <TextView
        android:id="@+id/labelDeviceID"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPhoneNumber"
        android:text="@string/label_device_id"/>
    <EditText
        android:id="@+id/txtDeviceID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelDeviceID"
        android:editable="false"/>
    <Button
        android:id="@+id/btnUpdateSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings_ok"
        android:layout_below="@id/txtDeviceID"/>
</RelativeLayout>
