<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ocse.hse.AboutTaskActivity">

    <TextView
        android:id="@+id/labelTaskName"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_task_name"/>
    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelTaskName"
        android:textColor="@color/task_info_color"
        android:editable="false"
        android:enabled="false"/>
    <TextView
        android:id="@+id/labelTaskPeriod"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTaskName"
        android:text="@string/label_task_period"/>
    <EditText
        android:id="@+id/txtTaskPeriod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelTaskPeriod"
        android:textColor="@color/task_info_color"
        android:editable="false"
        android:enabled="false"/>
    <TextView
        android:id="@+id/labelTaskDescription"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTaskPeriod"
        android:text="@string/label_task_description"/>
    <EditText
        android:id="@+id/txtTaskDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelTaskDescription"
        android:textColor="@color/task_info_color"
        android:editable="false"
        android:enabled="false"/>

</RelativeLayout>
